# C0501Q_HWJL01

./: .gitignore  LICENSE  README.md
sdk/: CMakeLists.txt  wizard
sdk/doc/: readme.html
sdk/doc/PDF_Files/: index.html
sdk/doc/html/: annotated.html  annotated.js  arm_nor_writer_8h.html  arm_nor_writer_8h.js  arm_nor_writer_8h_source.html  arm_nor_writer_utility_8h.html  arm_nor_writer_utility_8h.js  arm_nor_writer_utility_8h_source.html  audio_8c.html  audio_8c.js  audio_8c_source.html  audio_8h.html  audio_8h.js  audio_8h_source.html  audio__record_8c.html  audio__record_8c.js  audio__record_8c_source.html  boot.html  boot_8h.html  boot_8h_source.html  calllog_8c.html  calllog_8c.js  calllog_8c_source.html  capture_8c.html  capture_8c.js  capture_8c_source.html  classes.html  custom__target__board_8h.html  custom__target__board_8h_source.html  custom_target_board.html  dataconv.html  dataconv_8h.html  dataconv_8h_source.html  device.html  device.js  device_8h.html  device_8h_source.html  device_amplifier.html  device_backlight.html  device_battery.html  (+1816 more)
sdk/openrtos/: CMakeLists.txt  Kconfig  def.cmake  toolchain.cmake
sdk/openrtos/boot/: CMakeLists.txt  init.c
sdk/openrtos/include/: byteswap.h  dirent.h  dlfcn.h  endian.h  execinfo.h  ftw.h  i2s.h  limits.h  lwipopts.h  lwippools.h  malloc.h  memleak.h  mmio.h  mqueue.h  netdb.h  nss.h  poll.h  pthread.h  rmalloc.h  stdio.h  stdlib.h  string.h  syslog.h
sdk/openrtos/malloc/: CMakeLists.txt  _malloc.h  calloc.c  malign.c  malloc.c  mallocr.c  msize.c  mstats.c  mtrim.c  realloc.c  valloc.c
sdk/openrtos/openrtos/: CMakeLists.txt  FreeRTOS_CLI.c  croutine.c  event_groups.c  heap_3.c  heap_4.c  list.c  queue.c  tasks.c  timers.c  trcBase.c  trcHardwarePort.c  trcKernel.c  trcKernelPort.c  trcUser.c
sdk/project/: CMakeLists.txt
sdk/project/airconditioner2/: CMakeLists.txt  Kconfig.ucm  Kconfig.win32  Kconfig_Demo_IT9854SDK_V02_A  Kconfig_Demo_IT9854SDK_V03_A  Kconfig_indoor  airconditioner.h  airconditioner.ini  audio.c  config.c  external.c  function_table.c  layer_engineer.c  layer_engineer_machine.c  layer_engineer_power.c  layer_engineer_try.c  layer_logo.c  layer_main.c  layer_setting.c  layer_videoplayer.c  main.c  network.c  power.c  reset.c  scene.c  scene.h  screen.c  sound_text.txt  string.c  upgrade.c  video_mjpeg.c  webserver.c
sdk/project/alt_cpu_it9850/: CMakeLists.txt  Kconfig  alt_cpu_crt0.c  config.cmake  default.lds  gpio.c  spr_defs.h  ticktimer.c
sdk/project/bootloader/: CMakeLists.txt  Kconfig  Kconfig.win32  boot.c  bootloader.h  config.h  logo.c  main.c  main_openrtos.c  main_win32.c  recovery.c  restore.c  upgrade.c  usbdevice.c  video.c
sdk/project/codec/: CMakeLists.txt  config.cmake  default.lds  ticktimer.c
sdk/project/codec_ex/: CMakeLists.txt  Kconfig  codec_crt0.c  codecs_defs.h  config.cmake  default.lds  or32_crt0.S  ticktimer.c
sdk/project/codec_ex_it9850/: CMakeLists.txt  codecs.lds  codecs_defs.h  config.cmake  default.lds  or32_crt0.S  ticktimer.c
sdk/project/codec_it9850/: CMakeLists.txt  Kconfig  codec_crt0.c  codecs.h  codecs.lds  codecs_defs.h  config.cmake  default.lds  or32_crt0.S
sdk/project/ctrlboard/: CMakeLists.txt  Kconfig  Kconfig.win32  Kconfig_800x480.win32  Kconfig_9852_full_480x272  Kconfig_9854_evb_800x480  Kconfig_9856_evb_800x480  Kconfig_9856_mini_800x480  Kconfig_Demo_IT9852SDK_V02_B  Kconfig_Demo_IT9854SDK_V02_A  Kconfig_Demo_IT9854SDK_V03_A  Kconfig_Demo_IT9856SDK_V02_A  audio.c  backup.c  config.c  ctrlboard.h  ctrlboard.ini  external.c  external_process.c  function_table.c  layer.cmake  layer_airconditioner.c  layer_audioplayer.c  layer_button.c  layer_calendar.c  layer_check_anim.c  layer_check_list.c  layer_circlectrl.c  layer_clock.c  layer_imageplayer.c  layer_imageview.c  layer_keyboard2.c  layer_list.c  layer_logo.c  layer_main.c  layer_main_menu.c  layer_meter.c  layer_screensaver.c  layer_setting_display.c  layer_setting_lang.c  (+20 more)
sdk/project/dynamic_ui/: CMakeLists.txt  Kconfig  Kconfig.9070  Kconfig.win32  config.c  dynamic_ui.c  dynamic_ui.h  dynamic_ui.ini  function_table.c  main.c  scene.c
sdk/project/elevator2/: CMakeLists.txt  Kconfig  Kconfig.800x600  Kconfig.win32  Kconfig.win32_800x600  Kconfig_indoor  audio.c  config.c  elevator.h  elevator.ini  external.c  function_table.c  layer_main.c  layer_setting.c  main.c  network.c  reset.c  scene.c  scene.h  screen.c  storage.c  upgrade.c  webserver.c
sdk/project/hmi_ctrlboard/: CMakeLists.txt  Kconfig  Kconfig.win32  Kconfig_800x480.win32  Kconfig_9852_full_480x272  Kconfig_9854_evb_800x480  Kconfig_9856_evb_800x480  Kconfig_9856_mini_800x480  Kconfig_Demo_IT9852SDK_V02_B  Kconfig_Demo_IT9854SDK_V02_A  Kconfig_Demo_IT9856SDK_V02_A  audio.c  backup.c  config.c  ctrlboard.h  ctrlboard.ini  external.c  function_table.c  layer.cmake  layer_airconditioner.c  layer_main_menu.c  layer_touch_calibration.c  layer_videoview.c  load_tp_module.c  main.c  network.c  reset.c  scene.c  scene.h  screen.c  string.c  upgrade.c  video_mjpeg.c  webserver.c
sdk/project/hmi_mcu/: MainForm.Designer.cs  MainForm.cs  Program.cs  hmi_mcu.csproj  hmi_mcu.sln
sdk/project/hmi_tool/: AnalogClockWidget.cs  AnimationWidget.cs  AudioWidget.cs  BackgroundButtonWidget.cs  BackgroundWidget.cs  BlurWidget.cs  ButtonWidget.cs  CalendarWidget.cs  CheckBoxWidget.cs  CircleProgressBarWidget.cs  CodeGenerator.cs  ColorPickerWidget.cs  ContainerWidget.cs  CoverFlowWidget.cs  CurveWidget.cs  DigitalClock.cs  DragIconWidget.cs  DraggableTabControl.cs  DrawPenWidget.cs  DuplicateNamesForm.Designer.cs  DuplicateNamesForm.cs  FileListBoxWidget.cs  FormAutoGenITU.Designer.cs  FormAutoGenITU.cs  GUIDesigner.csproj  GUIDesigner.sln  IconListBoxWidget.cs  IconWidget.cs  ImageCoverFlowWidget.cs  JpegQualityForm.Designer.cs  JpegQualityForm.cs  KeyboardWidget.cs  KeystrokMessageFilter.cs  LanguageSpriteWidget.cs  LayerWidget.cs  ListBoxWidget.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  (+33 more)
sdk/sdk/: CMakeLists.txt  Kconfig  build.cmake  def.cmake
sdk/win32/: CMakeLists.txt  Kconfig  def.cmake  init.cmake
(+8685 files in other folders)
