project($ENV{CFG_PROJECT})
cmake_minimum_required(VERSION 2.8)
cmake_policy(SET CMP0002 OLD)
cmake_policy(SET CMP0014 OLD)

function(ITE_LINK_LIBRARY_IF_DEFINED_CFG_BUILD_LIB lib)
    string(TOUPPER CFG_BUILD_${lib} cfg)
    #message("CFG:${cfg}")

    if (DEFINED ${cfg})
        #message("LINK:${cfg}")
        target_link_libraries(${CMAKE_PROJECT_NAME}
            ${lib}
        )
    endif()
endfunction()

if (EXISTS ${PROJECT_SOURCE_DIR}/project/${CMAKE_PROJECT_NAME}/config.cmake)
    include(project/${CMAKE_PROJECT_NAME}/config.cmake)
else()
    include(build/$ENV{CFG_BUILDPLATFORM}/${CMAKE_PROJECT_NAME}/config.cmake)
endif()

if (EXISTS ${PROJECT_SOURCE_DIR}/project/${CMAKE_PROJECT_NAME}/project.cmake)
    include(project/${CMAKE_PROJECT_NAME}/project.cmake)
endif()

include(sdk/def.cmake)
include($ENV{CFG_PLATFORM}/def.cmake)

if ($ENV{CFG_PROJECT} STREQUAL codec)
    add_subdirectory(project/codec)
elseif ($ENV{CFG_PROJECT} STREQUAL codec_it9910)
    add_subdirectory(project/codec_it9910)
elseif ($ENV{CFG_PROJECT} STREQUAL codec_ex)
    add_subdirectory(project/codec_ex)
elseif ($ENV{CFG_PROJECT} STREQUAL codec_ex_it9910)
    add_subdirectory(project/codec_ex_it9910)
elseif ($ENV{CFG_PROJECT} STREQUAL risc1_code)
    add_subdirectory(project/risc1_code)
elseif ($ENV{CFG_PROJECT} STREQUAL risc1_code_it9850)
    add_subdirectory(project/risc1_code_it9850)
elseif ($ENV{CFG_PROJECT} STREQUAL risc2_code)
    add_subdirectory(project/risc2_code)
elseif ($ENV{CFG_PROJECT} STREQUAL risc2_code_it9850)
    add_subdirectory(project/risc2_code_it9850)
elseif ($ENV{CFG_PROJECT} STREQUAL codec_it9850)
    add_subdirectory(project/codec_it9850)
elseif ($ENV{CFG_PROJECT} STREQUAL codec_ex_it9850)
    add_subdirectory(project/codec_ex_it9850)
elseif ($ENV{CFG_PROJECT} STREQUAL alt_cpu_it9850)
    add_subdirectory(project/alt_cpu_it9850)
else()
    add_subdirectory(sdk)
    add_subdirectory($ENV{CFG_PLATFORM})
    add_subdirectory(project)
endif()
